# DragDropWindowSystem

./: .gitmodules  CMakeLists.txt  README.md
src/Application/: main.cpp
src/Editor/: CodeSubWindow.cpp  CodeSubWindow.h  CustomTabBar.cpp  FloatingTabWidget.cpp  FloatingTabWidget.h  FluidTabBar.cpp  FluidTabBar.h  MainWindow.cpp  MainWindow.h  Pane.cpp  Pane.h  README.md  ViewManager.cpp  ViewManager.h  ViewSplitter.cpp  ViewSplitter.h  brainstorming.txt
src/Rendering/: README.md
src/Runtime/: README.md
